[project]
name = "log-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
